# Leet-Claude

./: .gitignore  README.md  TODO.md  conftest.py  pytest.ini  reorganize_by_difficulty.py  requirements.txt  run_dev.bat  setup.py
.claude/: settings.local.json
app/: FRONTEND_ANALYSIS.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js
app/src/: App.tsx  index.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: main.rs
app/src-tauri/src/commands/: files.rs  mod.rs  parser.rs  problems.rs  tests.rs
app/src-tauri/src/models/: mod.rs  problem.rs  test_result.rs
docs/: PROBLEM_HINTS.md  QUICK_START.md
problems/: __init__.py
problems/backtracking/: STUDY_GUIDE.md  __init__.py
problems/bfs_dfs/: STUDY_GUIDE.md  __init__.py
problems/binary_search/: STUDY_GUIDE.md  __init__.py
problems/bit_manipulation/: STUDY_GUIDE.md  __init__.py
problems/dynamic_programming/: STUDY_GUIDE.md  __init__.py
problems/graphs/: STUDY_GUIDE.md  __init__.py
problems/greedy/: STUDY_GUIDE.md  __init__.py
problems/heaps/: STUDY_GUIDE.md  __init__.py
problems/intervals/: STUDY_GUIDE.md  __init__.py
problems/linked_lists/: STUDY_GUIDE.md  __init__.py
problems/sliding_window/: STUDY_GUIDE.md  __init__.py
problems/stacks_queues/: STUDY_GUIDE.md  __init__.py
scripts/: create_problem.py  fill_problem_descriptions.py  fill_todos.py  generate_progress.py  generate_starters.py  generate_templates.py  run_pattern.py  update_test_imports.py
utils/: __init__.py  data_structures.py  decorators.py  test_helpers.py
(+1521 files in other folders)
